--- a/amazon/src/main/resources/application.properties
+++ b/amazon/src/main/resources/application.properties
@@ -13,6 +13,9 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
+# JWT
+jwt.secret=EcommerceApplicationEcommerceApplication
+
 # MultiPart-File
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
